--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,13 +1,62 @@
 lang.change.login=Please sign in
 lang.change.login.username=Username
 lang.change.login.password=Password
-lang.change.login.signin=Sign In
-lang.change.login.signout=Sign Out
+#Error
 error.message.dep=First fill out the list of departments
 error.message.pos=First fill out the list of positions in the company
+#Include
 menu.message.home=Home
 menu.message.employee=Employees
 menu.message.department=Departments
 menu.message.drawing=Drawings
 menu.message.product=Products
 menu.message.position=Position in Company
+#Buttons
+button.delete=Delete
+button.submit=Submit
+button.update=Update
+button.signin=Sign In
+button.signout=Sign Out
+button.add.employee=Add Employee
+button.add.drawing=Add Drawing
+button.add.product=Add Product
+button.add.department=Add Department
+button.add.position=Add Position
+
+#Deparment
+department.message.add = Add new department
+department.message.name=Department name
+department.message.departments=Departments
+
+#Product
+product.message.add = Add new product
+product.message.name=Product name
+product.message.products=Products
+
+#Position in company
+position.message.add = Add new position
+position.message.name=Position in company
+position.message.positions=Positions in company
+
+#Employee
+employee.message.add = Add new employee
+employee.message.firstName=First name
+employee.message.middleName=Middle name
+employee.message.lastName=Last name
+employee.message.phone=Phone
+employee.message.userName=User Name
+employee.message.password=Password
+employee.message.role=Role
+employee.message.department=Department
+employee.message.positions=Position in company
+employee.message.employees=Employees
+employee.message.update=Update Employee
+
+#Drawing
+drawing.message.add = Add new drawing
+drawing.message.productName=Product name
+drawing.message.drawingName=Drawing name
+drawing.message.checked=Checked
+drawing.message.developed=Developed
+drawing.message.approved=Approved
+drawing.message.drawings=Drawings
