All CRUD operations

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,6 +4,7 @@ lang.change.login.password=Password
 #Error
 error.message.dep=First fill out the list of departments
 error.message.pos=First fill out the list of positions in the company
+error.message.sure=Are you sure?
 #Include
 menu.message.home=Home
 menu.message.employee=Employees
