--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -4,6 +4,7 @@ lang.change.login.password=Пароль
 #Ошибки
 error.message.dep=Сначала заполните список отделов
 error.message.pos=Сначала заполните список должностей
+error.message.sure=Вы уверены?
 #Папка include
 menu.message.home=Домашняя страница
 menu.message.employee=Работники
