--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,6 +4,7 @@ lang.change.login.password=Password
 #Error
 error.message.dep=First fill out the list of departments
 error.message.pos=First fill out the list of positions in the company
+error.message.emp=First fill out the list of employees
 error.message.sure=Are you sure?
 #Include
 menu.message.home=Home
@@ -28,17 +29,18 @@ button.add.position=Add Position
 department.message.add = Add new department
 department.message.name=Department name
 department.message.departments=Departments
+department.message.update = Update department
 
 #Product
 product.message.add = Add new product
 product.message.name=Product name
 product.message.products=Products
-
+product.message.update=Update product
 #Position in company
 position.message.add = Add new position
 position.message.name=Position in company
 position.message.positions=Positions in company
-
+position.message.update=Update position
 #Employee
 employee.message.add = Add new employee
 employee.message.firstName=First name
@@ -61,3 +63,6 @@ drawing.message.checked=Checked
 drawing.message.developed=Developed
 drawing.message.approved=Approved
 drawing.message.drawings=Drawings
+drawing.message.update=Update drawing
+main.message.title=Design_bureau
+main.message.list.dep=List positions in department name:
