--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -4,6 +4,7 @@ lang.change.login.password=Пароль
 #Ошибки
 error.message.dep=Сначала заполните список отделов
 error.message.pos=Сначала заполните список должностей
+error.message.emp=Сначала заполните список сотрудников
 error.message.sure=Вы уверены?
 #Папка include
 menu.message.home=Домашняя страница
@@ -27,16 +28,19 @@ button.add.position=Добавить должность
 department.message.add = Добавление нового отдела
 department.message.name=Название отдела
 department.message.departments=Отделы
+department.message.update = Редактирование отдела
 
 #Изделия
 product.message.add = Добавить изделие
 product.message.name=Название изделия
 product.message.products=Изделия
+product.message.update=Редактирование изделия
 
 #Должности
 position.message.add = Добавить должность
 position.message.name=Должность
 position.message.positions=Должности
+position.message.update=Редактирование должности
 
 #Сотрудники
 employee.message.add = Добавить сотрудника
@@ -60,3 +64,6 @@ drawing.message.checked=Проверил
 drawing.message.developed=Разработал
 drawing.message.approved=Утвердил
 drawing.message.drawings=Чертежи
+drawing.message.update=Редактирование чертежа
+main.message.title=Конструкторское бюро
+main.message.list.dep=Список должностей в отделе 
